config/k8s/ingress-gateway.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway-ingress
  namespace: circleguard-master
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - api.circleguard.edu
      secretName: circleguard-tls
  rules:
    - host: api.circleguard.edu
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gateway-service
                port:
                  number: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: gateway-service
  namespace: circleguard-master
spec:
  selector:
    app: gateway-service
  ports:
    - name: http
      port: 8080
      targetPort: 8080
    - name: https
      port: 443
      targetPort: 8443
  type: NodePort
